# cif-parser

./: .gitignore  Cargo.toml  README.md  rdg-terms.md
.circleci/: config.yml
benches/: reader.rs
examples/: reader.rs
src/: association.rs  basic_schedule.rs  change_en_route.rs  errors.rs  header.rs  helpers.rs  lib.rs  location_intermediate.rs  location_origin.rs  location_terminating.rs  main.rs  reader.rs  schedule.rs  schedule_extra.rs  tiploc.rs  tiploc_amend.rs  tiploc_insert.rs  trailer.rs
src/records/: association.rs  header.rs  mod.rs  schedule_extra.rs  tiploc_amend.rs
tests/: incremental.rs  reader-smoketest.rs  sample-larger.cif  sample.cif
