[package]
name = "cif-parser"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

[dependencies]
nom = "6.0.0"
log = "0.4.7"

chrono = "0.4.7"
lexical-core = "0.7.4"
chrono-tz = "0.5.1"
bitflags = "1.1.0"
bytes = "1.0.0"
thiserror = "1.0.20"

[dev-dependencies]
env_logger = "0.8.1"
structopt = "0.3.15"
suppositions = { git = "https://github.com/cstorey/suppositions.git" }
anyhow = "1.0.31"


[profile.release]
debug = true
