[package]
name = "cif-parser"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

[features]
benches = []

[dependencies]
log = "0.4.7"

chrono = "0.4.7"
lexical-core = "0.8.0"
bitflags = "1.1.0"
bytes = "1.0.0"
thiserror = "1.0.20"
fallible-iterator = "0.2.0"

[dev-dependencies]
env_logger = "0.10.0"
structopt = "0.3.15"
anyhow = "1.0.31"

[profile.release]
debug = true
