[package]
name = "cif-parser"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

[features]
benches = []

[dependencies]
chrono = "0.4.7"
lexical-core = "1.0.2"
bitflags = "2.4.1"
bytes = "1.0.0"
thiserror = "1.0.20"
fallible-iterator = "0.3.0"
tracing = "0.1.40"

[dev-dependencies]
structopt = "0.3.15"
anyhow = "1.0.31"
criterion = "0.5.1"
tracing-subscriber = "0.3.18"

[profile.release]
debug = true

[[bench]]
name = "reader"
harness = false
